--- a/glibc-git/PKGBUILD
+++ b/glibc-git/PKGBUILD
@@ -4,7 +4,7 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=glibc-git
-pkgver=2.28.r164.g81dca813cc
+pkgver=2.28.r261.g6d6ee04622
 pkgrel=1
 pkgdesc='GNU C Library'
 arch=('i686' 'x86_64')
@@ -13,7 +13,7 @@ license=('GPL' 'LGPL')
 groups=('base')
 depends=('linux-api-headers' 'tzdata' 'filesystem')
 optdepends=('gd: graph image generation with memusage')
-makedepends=('git')
+makedepends=('git' 'python')
 # XXX Arch Linux's valgrind package requires an exact version
 provides=("glibc=${pkgver%%.r*}")
 conflicts=('glibc')
@@ -26,7 +26,7 @@ source=('git+https://sourceware.org/git/glibc.git'
         'bz20338.patch')
 sha256sums=('SKIP'
             '05fbb88877cdddc99ef25e48304d6e5ac236660c20925d461cb4e90ebcb3b7de'
-            'dd717ee59e778d808545f4f3f3f436bfc678a2d3937589d649b70767025e7e1e'
+            'a1973bc50a3cd80aa1745de0622a8496d185b9a16fceb1f3adbe33eb1aafb18b'
             '959d4f41edd004bddd9091c4d8c8c3aa07d79a04bfdb89d59f9f26fe5a74d32a')
 
 pkgver() {
