--- a/pacman-git/makepkg.conf
+++ b/pacman-git/makepkg.conf
@@ -143,5 +143,5 @@ COMPRESSLZ=(lzip -c -f)
 # EXTENSION DEFAULTS
 #########################################################################
 #
-PKGEXT='.pkg.tar.xz'
+PKGEXT='.pkg.tar.zst'
 SRCEXT='.src.tar.gz'
